<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/bg_color"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/heart_red"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:layout_marginBottom="@dimen/common_margin">

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="@dimen/common_margin"
            android:background="@android:color/transparent"
            android:scaleType="centerCrop"
            android:src="@drawable/circle_xmark_solid"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/heart_red" />


        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_margin"
            android:background="@android:color/transparent"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/incorrect"
            android:textColor="@color/heart_red"
            android:textSize="36sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView10"
            app:layout_constraintStart_toEndOf="@+id/imageView10"
            app:layout_constraintTop_toTopOf="@+id/imageView10" />


        <ImageView
            android:id="@+id/report_btn"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@android:color/transparent"
            android:src="@drawable/flag_solid"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/heart_red"
            android:layout_marginEnd="@dimen/common_margin"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/correct_ans_heading_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/correct_answer"
        android:textColor="@color/heart_red"
        android:textSize="20sp"
        android:layout_marginEnd="@dimen/common_margin"
        android:layout_marginStart="@dimen/common_margin" />


    <TextView
        android:id="@+id/correct_ans_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/nunito_semibold"
        android:textColor="@color/heart_red"
        android:textSize="20sp"
        android:layout_marginStart="@dimen/common_margin"
        android:layout_marginEnd="@dimen/common_margin"/>


    <TextView
        android:id="@+id/next_btn"
        style="@style/LLA.WrongAnsButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/got_it"
        android:layout_margin="@dimen/common_margin"/>

</LinearLayout>