<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    tools:context=".ui.afterlearn.AfterLearnActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/lesson_completed"
        android:textColor="@color/primary_color"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/secondary_remarks_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/next_btn"
        style="@style/LLA.PrimaryButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/common_margin"
        android:layout_marginBottom="@dimen/common_margin"
        android:layout_marginStart="8dp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <LinearLayout
        android:id="@+id/home_btn"
        style="@style/LLA.SecondaryButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/common_margin"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="@dimen/common_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/next_btn">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/arrow_left_solid"
            app:tint="@color/secondary_text_color" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/home"
            android:textColor="@color/secondary_text_color"
            android:textSize="18sp" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/level_progress_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/secondary_btn_bg"
        android:padding="@dimen/common_margin"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/next_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="@dimen/common_margin"
        android:layout_marginBottom="100dp">

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/level_progress_loader"
            style="@style/LLA.LoaderHorizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:progress="7"
            android:max="10"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageView12"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@android:color/transparent"
            android:src="@drawable/chart_svgrepo_com"
            app:layout_constraintBottom_toBottomOf="@+id/level_progress_loader"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/level_progress_loader" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/common_margin"
            android:background="@android:color/transparent"
            android:fontFamily="@font/nunito_semibold"
            android:text="@string/level_progress"
            android:textColor="@color/primary_text_color"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/level_progress_loader"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/accuracy_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/common_margin"
        android:background="@drawable/secondary_btn_bg"
        android:padding="@dimen/common_margin"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toTopOf="@+id/level_progress_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/accuracy_progress_bar"
            style="@style/LLA.LoaderHorizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:progress="3"
            android:max="10"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageView11"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@android:color/transparent"
            android:src="@drawable/target_hit_aim_svgrepo_com"
            app:layout_constraintBottom_toBottomOf="@+id/accuracy_progress_bar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/accuracy_progress_bar" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/common_margin"
            android:background="@android:color/transparent"
            android:fontFamily="@font/nunito_semibold"
            android:text="@string/accuracy"
            android:textColor="@color/primary_text_color"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/accuracy_progress_bar"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/secondary_remarks_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:fontFamily="@font/nunito_semibold"
        android:gravity="center"
        android:text="Excellent! You have completed the lesson with 100% accuracy. Keep up the great work!"
        android:textColor="@color/primary_text_color"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="@dimen/common_margin"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toTopOf="@+id/accuracy_parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".5" />


    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        android:background="@android:color/transparent"
        app:lottie_rawRes="@raw/animation_celebretion" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimationView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/animation_trophy" />


</androidx.constraintlayout.widget.ConstraintLayout>